@@ -21,10 +21,13 @@
 package com.redhat.swatch.aws.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.verify;
@@ -35,6 +38,7 @@ import com.redhat.swatch.aws.config.FeatureFlags;
 import com.redhat.swatch.aws.exception.AwsUsageContextLookupException;
 import com.redhat.swatch.aws.exception.DefaultApiException;
 import com.redhat.swatch.aws.exception.SubscriptionCanNotBeDeterminedException;
+import com.redhat.swatch.aws.exception.SubscriptionMissingBillingAccountIdException;
 import com.redhat.swatch.aws.exception.SubscriptionRecentlyTerminatedException;
 import com.redhat.swatch.clients.contracts.api.model.AwsUsageContext;
 import com.redhat.swatch.clients.contracts.api.model.Error;
@@ -105,6 +109,7 @@ class AwsBillableUsageAggregateConsumerTest {
       new AwsUsageContext()
           .rhSubscriptionId("id")
           .customerId("customer")
+          .customerAwsAccountId("123456789012")
           .productCode("product")
           .subscriptionStartDate(OffsetDateTime.MIN);
   public static final BatchMeterUsageResponse BATCH_METER_USAGE_SUCCESS_RESPONSE =
@@ -175,7 +180,7 @@ class AwsBillableUsageAggregateConsumerTest {
             "status", BillableUsage.Status.SUCCEEDED.toString(), "error_code", "");
 
     meteringClient = mock(MarketplaceMeteringClient.class);
-    when(featureFlags.useCustomerAwsAccountId()).thenReturn(false);
+    when(featureFlags.useLicense()).thenReturn(false);
   }
 
   @Test
@@ -202,14 +207,14 @@ class AwsBillableUsageAggregateConsumerTest {
 
   @Test
   void shouldLookupAwsContextOnApplicableSnapshot() throws ApiException {
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(new AwsUsageContext());
     consumer.process(ROSA_INSTANCE_HOURS_RECORD);
-    verify(contractsApi).getAwsUsageContext(any(), any(), any(), any(), any(), any());
+    verify(contractsApi).getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull());
   }
 
   @Test
-  void shouldUseCustomerIdentifierWhenFlagOff() throws ApiException {
+  void shouldUseCustomerAwsAccountId() throws ApiException {
     AwsUsageContext context =
         new AwsUsageContext()
             .rhSubscriptionId("id")
@@ -218,46 +223,122 @@ class AwsBillableUsageAggregateConsumerTest {
             .productCode("product")
             .subscriptionStartDate(OffsetDateTime.MIN);
 
-    UsageRecord record = processUsageAndCaptureRecord(context, false);
-
-    assertEquals("marketplace-customer", record.customerIdentifier());
-    assertTrue(record.customerAWSAccountId() == null || record.customerAWSAccountId().isBlank());
-  }
-
-  @Test
-  void shouldUseCustomerAwsAccountIdWhenFlagOn() throws ApiException {
-    AwsUsageContext context =
-        new AwsUsageContext()
-            .rhSubscriptionId("id")
-            .customerId("marketplace-customer")
-            .customerAwsAccountId("123456789012")
-            .productCode("product")
-            .subscriptionStartDate(OffsetDateTime.MIN);
-
-    UsageRecord record = processUsageAndCaptureRecord(context, true);
+    UsageRecord record = processUsageAndCaptureRecord(context, ROSA_INSTANCE_HOURS_RECORD);
 
     assertEquals("123456789012", record.customerAWSAccountId());
     assertTrue(record.customerIdentifier() == null || record.customerIdentifier().isBlank());
   }
 
   @Test
-  void shouldFallbackToCustomerIdentifierWhenFlagOnAndAccountIdNull() throws ApiException {
-    AwsUsageContext context =
-        new AwsUsageContext()
-            .rhSubscriptionId("id")
-            .customerId("marketplace-customer")
-            .productCode("product")
-            .subscriptionStartDate(OffsetDateTime.MIN);
+  void shouldOmitLicenseArnWhenUseLicenseFlagOff() throws ApiException {
+    when(featureFlags.useLicense()).thenReturn(false);
+    BillableUsageAggregate aggregateWithLicense =
+        createAggregateWithLicense("arn:aws:license:test");
 
-    UsageRecord record = processUsageAndCaptureRecord(context, true);
+    UsageRecord record = processUsageAndCaptureRecord(MOCK_AWS_USAGE_CONTEXT, aggregateWithLicense);
 
-    assertEquals("marketplace-customer", record.customerIdentifier());
-    assertTrue(record.customerAWSAccountId() == null || record.customerAWSAccountId().isBlank());
+    assertNull(record.licenseArn());
+    verify(contractsApi).getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull());
+  }
+
+  @Test
+  void shouldSetLicenseArnWhenUseLicenseFlagOn() throws ApiException {
+    when(featureFlags.useLicense()).thenReturn(true);
+    String licenseId = "arn:aws:license-manager:us-east-1:123:license:swatch-test";
+    BillableUsageAggregate aggregateWithLicense = createAggregateWithLicense(licenseId);
+
+    UsageRecord record = processUsageAndCaptureRecord(MOCK_AWS_USAGE_CONTEXT, aggregateWithLicense);
+
+    assertEquals(licenseId, record.licenseArn());
+  }
+
+  @Test
+  void shouldOmitLicenseArnWhenFlagOnButLicenseIdMissing() throws ApiException {
+    when(featureFlags.useLicense()).thenReturn(true);
+
+    UsageRecord record =
+        processUsageAndCaptureRecord(MOCK_AWS_USAGE_CONTEXT, ROSA_INSTANCE_HOURS_RECORD);
+
+    assertNull(record.licenseArn());
+  }
+
+  @Test
+  void shouldPassLicenseIdToGetAwsUsageContext() throws ApiException {
+    when(featureFlags.useLicense()).thenReturn(true);
+    String licenseId = "arn:aws:license-manager:us-east-1:123:license:lookup";
+    BillableUsageAggregate aggregate = createAggregateWithLicense(licenseId);
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), eq(licenseId)))
+        .thenReturn(MOCK_AWS_USAGE_CONTEXT);
+    when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
+    when(meteringClient.batchMeterUsage(any(BatchMeterUsageRequest.class)))
+        .thenReturn(BATCH_METER_USAGE_SUCCESS_RESPONSE);
+
+    consumer.process(aggregate);
+
+    verify(contractsApi)
+        .getAwsUsageContext(any(), any(), any(), any(), any(), any(), eq(licenseId));
+  }
+
+  @Test
+  void shouldOmitLicenseIdFromContextLookupWhenFlagOff() throws ApiException {
+    when(featureFlags.useLicense()).thenReturn(false);
+    BillableUsageAggregate aggregate =
+        createAggregateWithLicense("arn:aws:license-manager:us-east-1:123:license:legacy");
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
+        .thenReturn(MOCK_AWS_USAGE_CONTEXT);
+    when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
+    when(meteringClient.batchMeterUsage(any(BatchMeterUsageRequest.class)))
+        .thenReturn(BATCH_METER_USAGE_SUCCESS_RESPONSE);
+
+    consumer.process(aggregate);
+
+    verify(contractsApi).getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull());
+  }
+
+  @Test
+  void shouldEmitStatusWithLicenseIdOnSuccess() throws ApiException {
+    when(featureFlags.useLicense()).thenReturn(true);
+    String licenseId = "arn:aws:license-manager:us-east-1:123:license:status-ok";
+    BillableUsageAggregate aggregate = createAggregateWithLicense(licenseId);
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), eq(licenseId)))
+        .thenReturn(MOCK_AWS_USAGE_CONTEXT);
+    when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
+    when(meteringClient.batchMeterUsage(any(BatchMeterUsageRequest.class)))
+        .thenReturn(BATCH_METER_USAGE_SUCCESS_RESPONSE);
+
+    consumer.process(aggregate);
+
+    verify(billableUsageStatusProducer)
+        .emitStatus(
+            argThat(
+                usage ->
+                    BillableUsage.Status.SUCCEEDED.equals(usage.getStatus())
+                        && licenseId.equals(usage.getLicenseId())));
+  }
+
+  @Test
+  void shouldEmitStatusWithLicenseIdOnFailure() throws ApiException {
+    when(featureFlags.useLicense()).thenReturn(true);
+    String licenseId = "arn:aws:license-manager:us-east-1:123:license:status-fail";
+    BillableUsageAggregate aggregate = createAggregateWithLicense(licenseId);
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), eq(licenseId)))
+        .thenThrow(new SubscriptionCanNotBeDeterminedException(null));
+
+    consumer.process(aggregate);
+
+    verify(billableUsageStatusProducer)
+        .emitStatus(
+            argThat(
+                usage ->
+                    BillableUsage.Status.FAILED.equals(usage.getStatus())
+                        && BillableUsage.ErrorCode.SUBSCRIPTION_NOT_FOUND.equals(
+                            usage.getErrorCode())
+                        && licenseId.equals(usage.getLicenseId())));
   }
 
   @Test
   void shouldSendUsageForApplicableSnapshot() throws ApiException {
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(MOCK_AWS_USAGE_CONTEXT);
     when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
     consumer.process(ROSA_INSTANCE_HOURS_RECORD);
@@ -266,7 +347,7 @@ class AwsBillableUsageAggregateConsumerTest {
 
   @Test
   void whenThrottlingExceptionThenSetRateLimitErrorCode() throws ApiException {
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(MOCK_AWS_USAGE_CONTEXT);
     when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
     ThrottlingException throttlingException =
@@ -291,7 +372,7 @@ class AwsBillableUsageAggregateConsumerTest {
             MetricIdUtils.getInstanceHours().toUpperCaseFormatted(),
             OffsetDateTime.now(),
             42.0);
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenThrow(AwsUsageContextLookupException.class);
     consumer.process(aggregate);
     verifyNoInteractions(meteringClient);
@@ -311,22 +392,23 @@ class AwsBillableUsageAggregateConsumerTest {
 
   @Test
   void shouldFindStorageAwsDimension() throws ApiException {
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(new AwsUsageContext());
     consumer.process(ROSA_STORAGE_CORES_RECORD);
-    verify(contractsApi).getAwsUsageContext(any(), any(), any(), any(), any(), any());
+    verify(contractsApi).getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull());
   }
 
   @Test
   void shouldIncrementAcceptedAndSuccessCounters() throws ApiException {
     var priorSuccess = successCounter.count();
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    var priorAccepted = acceptedCounter.count();
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(MOCK_AWS_USAGE_CONTEXT);
     when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
     when(meteringClient.batchMeterUsage(any(BatchMeterUsageRequest.class)))
         .thenReturn(BATCH_METER_USAGE_SUCCESS_RESPONSE);
     consumer.process(ROSA_INSTANCE_HOURS_RECORD);
-    assertEquals(1.0, acceptedCounter.count());
+    assertEquals(priorAccepted + 1.0, acceptedCounter.count());
 
     var metric = getMeteredTotalMetricForSucceeded(MetricIdUtils.getInstanceHours().getValue());
     assertTrue(metric.isPresent());
@@ -337,7 +419,7 @@ class AwsBillableUsageAggregateConsumerTest {
   void shouldIncrementFailureCounterIfUnprocessed() throws ApiException {
     double priorFailed = failedCounter.count();
     double current = rejectedCounter.count();
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(MOCK_AWS_USAGE_CONTEXT);
     when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
     when(meteringClient.batchMeterUsage(any(BatchMeterUsageRequest.class)))
@@ -358,7 +440,7 @@ class AwsBillableUsageAggregateConsumerTest {
   @Test
   void shouldIncrementFailureCounterOnError() throws ApiException {
     double current = rejectedCounter.count();
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(MOCK_AWS_USAGE_CONTEXT);
     when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
     when(meteringClient.batchMeterUsage(any(BatchMeterUsageRequest.class)))
@@ -378,7 +460,7 @@ class AwsBillableUsageAggregateConsumerTest {
             Duration.of(1, ChronoUnit.HOURS),
             billableUsageStatusProducer,
             featureFlags);
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(MOCK_AWS_USAGE_CONTEXT);
     processor.process(ROSA_INSTANCE_HOURS_RECORD);
     verifyNoInteractions(clientFactory, meteringClient);
@@ -390,7 +472,7 @@ class AwsBillableUsageAggregateConsumerTest {
     error.setCode("CONTRACTS1005");
     var response = Response.serverError().entity(error).build();
     var exception = new DefaultApiException(response, error);
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenThrow(exception);
 
     assertThrows(
@@ -406,7 +488,7 @@ class AwsBillableUsageAggregateConsumerTest {
     error.setCode("CONTRACTS1005");
     var response = Response.serverError().entity(error).build();
     var exception = new DefaultApiException(response, error);
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenThrow(exception);
 
     consumer.process(ROSA_INSTANCE_HOURS_RECORD);
@@ -414,9 +496,43 @@ class AwsBillableUsageAggregateConsumerTest {
   }
 
   @Test
+  void shouldThrowSubscriptionMissingBillingAccountIdException() throws ApiException {
+    Error error = new Error();
+    error.setCode("CONTRACTS1006");
+    var response = Response.status(Response.Status.NOT_FOUND).entity(error).build();
+    var exception = new DefaultApiException(response, error);
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
+        .thenThrow(exception);
+
+    assertThrows(
+        SubscriptionMissingBillingAccountIdException.class,
+        () -> consumer.lookupAwsUsageContext(ROSA_INSTANCE_HOURS_RECORD));
+  }
+
+  @Test
+  void shouldSkipMessageIfSubscriptionMissingBillingAccountId() throws ApiException {
+    Error error = new Error();
+    error.setCode("CONTRACTS1006");
+    var response = Response.status(Response.Status.NOT_FOUND).entity(error).build();
+    var exception = new DefaultApiException(response, error);
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
+        .thenThrow(exception);
+
+    consumer.process(ROSA_INSTANCE_HOURS_RECORD);
+    verifyNoInteractions(meteringClient);
+    verify(billableUsageStatusProducer)
+        .emitStatus(
+            argThat(
+                usage ->
+                    BillableUsage.Status.FAILED.equals(usage.getStatus())
+                        && BillableUsage.ErrorCode.USAGE_CONTEXT_LOOKUP.equals(
+                            usage.getErrorCode())));
+  }
+
+  @Test
   void shouldSkipMessageProcessingIfUsageIsOutsideTheUsageWindow() throws Exception {
     double currentIgnored = ignoredCounter.count();
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(MOCK_AWS_USAGE_CONTEXT);
     BillableUsageAggregate aggregate =
         createAggregate(
@@ -445,7 +561,7 @@ class AwsBillableUsageAggregateConsumerTest {
             42.0);
 
     // verify failure
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenThrow(new SubscriptionCanNotBeDeterminedException(null));
     consumer.process(aggregate);
     verify(billableUsageStatusProducer)
@@ -457,9 +573,8 @@ class AwsBillableUsageAggregateConsumerTest {
                             usage.getErrorCode())));
 
     // verify success
-    reset(contractsApi, billableUsageStatusProducer, featureFlags);
-    when(featureFlags.useCustomerAwsAccountId()).thenReturn(false);
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+    reset(contractsApi, billableUsageStatusProducer);
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), isNull()))
         .thenReturn(MOCK_AWS_USAGE_CONTEXT);
     when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
     when(meteringClient.batchMeterUsage(any(BatchMeterUsageRequest.class)))
@@ -506,9 +621,8 @@ class AwsBillableUsageAggregateConsumerTest {
   }
 
   private UsageRecord processUsageAndCaptureRecord(
-      AwsUsageContext context, boolean useCustomerAwsAccountId) throws ApiException {
-    when(featureFlags.useCustomerAwsAccountId()).thenReturn(useCustomerAwsAccountId);
-    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any()))
+      AwsUsageContext context, BillableUsageAggregate aggregate) throws ApiException {
+    when(contractsApi.getAwsUsageContext(any(), any(), any(), any(), any(), any(), any()))
         .thenReturn(context);
     when(clientFactory.buildMarketplaceMeteringClient(any())).thenReturn(meteringClient);
     when(meteringClient.batchMeterUsage(any(BatchMeterUsageRequest.class)))
@@ -516,9 +630,21 @@ class AwsBillableUsageAggregateConsumerTest {
 
     ArgumentCaptor<BatchMeterUsageRequest> requestCaptor =
         ArgumentCaptor.forClass(BatchMeterUsageRequest.class);
-    consumer.process(ROSA_INSTANCE_HOURS_RECORD);
+    consumer.process(aggregate);
     verify(meteringClient).batchMeterUsage(requestCaptor.capture());
-    return requestCaptor.getValue().usageRecords().get(0);
+    var captured = requestCaptor.getValue();
+    return captured.usageRecords().getFirst();
+  }
+
+  private static BillableUsageAggregate createAggregateWithLicense(String licenseId) {
+    BillableUsageAggregate aggregate =
+        createAggregate(
+            "rosa",
+            MetricIdUtils.getInstanceHours().toUpperCaseFormatted(),
+            OffsetDateTime.now(Clock.systemUTC()),
+            42.0);
+    aggregate.setLicenseId(licenseId);
+    return aggregate;
   }
 
   private static BillableUsageAggregate createAggregate(
